# ai-agent-workspace

./: .gitignore  README.md  ai-agent-workspace.code-workspace  package-lock.json  package.json  tsconfig.json
.github/hooks/: post-tool-use.json  pre-run-command.json
.github/hooks/scripts/: log-token-usage.mjs  pre-run-command-guard.mjs
.github/instructions/: unit-tests.instructions.md  update-readme.instructions.md
claude-simple-agent-and-api/: .env.example  README.md  agent.py  app.py  conftest.py  get-production-ready.md  requirements.txt  test_agent.py
commands/: README.md  jira-read-work-item.md
simple-agent-console/: README.md  development-plan.md  pyproject.toml
simple-agent-console/src/: create_agent.py  main-structured.py  main.py
simple-agent-console/src/simple_agent_console.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
simple-agent-console/src/tools/: __init__.py  movie_tools.py
skills/: README.md
skills/code-using-tdd/: SKILL.md
tools/: README.md  atlassianCli.ts  jira-read-work-item.js  jira-read-work-item.ts
tools/postgres-mcp/: README.md  example-queries.sql  export-schema.sh  mcp.template.json
workflows/: README.md
